--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "setup": "ts-node src/setup.ts"
   },
   "dependencies": {
+    "desktop-screenshot": "^0.1.1",
     "robotjs": "^0.6.0",
     "screenshot-desktop": "^1.15.0",
+    "sharp": "^0.34.4",
     "tesseract.js": "^5.0.4"
   },
   "devDependencies": {
